--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
 ---
 output:
   md_document:
-    variant: markdown_github
+    variant: gfm
 ---
 
 [![img](https://img.shields.io/badge/Lifecycle-Experimental-339999)](https://github.com/bcgov/repomountie/blob/master/doc/lifecycle-badges.md)
@@ -16,10 +16,11 @@ SIMS is a web application for managing, submitting, and accessing biodiversity d
 
 You can install `simsbc` from GitHub using the [remotes](https://cran.r-project.org/package=remotes) package.
 
-`install.package("remotes")`
-
-`install.github("bcgov/simsbc")`
-`library(simsbc)`
+```{r echo = F, results = 'hide', message = F, warning = F}
+install.packages("remotes")
+remotes::install_github("bcgov/simsbc")
+library(simsbc)
+```
 
 ### Authentication
 
@@ -43,25 +44,6 @@ The Species Inventory Management System organizes ecological data into Projects 
 ### Coming Soon
 
 We are building rapidly towards letting biologists import species observations. You will soon be able to access species observations through `simsbc`.
-
-
-#### Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-## Login through the browser to use data-retrieving functions
-login_sims()
-
-## View a dataframe of my own Projects
-get_my_projects()
-
-## View information about a specific Project, identified by inspecting the output from `get_my_projects()`.
-get_project_details(project_id = 1)
-
-## View information about a specific Survey, identified by inspecting the output from `get_project_details()`.
-get_survey_details(survey_id = 2, project_id = 2)
-```
 
 ### Project Status
 
