--- a/README.Rmd
+++ b/README.Rmd
@@ -8,9 +8,11 @@ output:
 
 # simsbc
 
-Real-time access to biodiversity data and projects from British Columbia's Species Inventory Management System (SIMS).
+Access to biodiversity data and projects from British Columbia's Species Inventory Management System (SIMS).
 
 SIMS is a web application for managing, submitting, and accessing biodiversity data in British Columbia. It is designed for biologists working for or in partnership with the Province, supporting relationships between government, industry, Indigenous communities, and consultants to advance natural resource stewardship.
+
+This package is intended for biologists who want to load data from SIMS into R, removing the need to manually export data from SIMS and import it into R.
 
 ```{r setup, echo = FALSE, warning = FALSE, message = FALSE}
 knitr::opts_chunk$set(
@@ -26,26 +28,33 @@ library(simsbc)
 You can install `simsbc` from GitHub using the [remotes](https://cran.r-project.org/package=remotes) package.
 ```{r eval = F}
 install.packages("remotes")
+
+# Install the simsbc package from GitHub
 remotes::install_github("bcgov/simsbc")
+
 library(simsbc)
 ```
 
 ### Authentication
 
-You must use `login_sims()` to login to the Species Inventory Management System to access data. 
+You must login to the Species Inventory Management System using the `login_sims()` function to access data.
+```{r eval=F}
+login_sims()
+```
 
-`login_sims()` will open a browser window where you can login with an IDIR (for internal government staff and contractors), Business BCeID, or Basic BCeID. After you login, R will save your temporary access token for `simsbc` functions to retrieve when called. You will need to call `login_sims()` again if your token expires or you clear your environment.
+This function opens a browser window where you can login by IDIR (for internal government staff and contractors), Business BCeID, or Basic BCeID. After you login, your temporary SIMS access token will be saved to your R environment. 
+
+You will need to call `login_sims()` again if your token expires or you clear your environment.
 
 Unsure about how to login? [Learn about BCeIDs](https://www.bceid.ca/aboutbceid/).
 
 ### Features
 
-The Species Inventory Management System organizes ecological data into Projects and Surveys.
+The Species Inventory Management System organizes ecological data into Projects and Surveys, the latter of which contain species observations, captured or marked animals, and other data.
 
 - `get_my_projects()` returns a dataframe of Projects that you belong to. By default, these are Projects that you have created or have been invited to.
 - `get_all_projects()` returns a dataframe of all Projects that you have access to, including those that you do not belong to. Some Projects are secured under the [Species and Ecosystems Data and Information Security Policy](https://www2.gov.bc.ca/gov/content/environment/natural-resource-stewardship/laws-policies-standards-guidance/data-information-security) and may not be returned.
-- `get_project_details()` returns an object of class Project, which has various attributes including name and objectives.
-
+- `get_project_details()` returns an object of class Project, which has various attributes including a name and objectives.
 - `get_surveys()` returns a dataframe of Surveys from a specific Project.
 - `get_survey_details()` returns an object of class Survey, which has various attributes including objectives, species of interest and start and end dates.
 
@@ -62,16 +71,16 @@ get_my_projects()
 get_project_details(project_id = 1)
 
 ## Get a dataframe of all Surveys in a specific Project
-get_surveys(survey_id = 2, project_id = 1)
+get_surveys(project_id = 1)
 ```
 
 ### Coming Soon
 
-We are building rapidly towards letting biologists import species observations. You will soon be able to access species observations through `simsbc`.
+We are building rapidly towards letting biologists import species observations, after which we will build functions for retrieving species observations.
 
 ### Project Status
 
-`simsbc` is experimental. New features will be released as the Species Inventory Management System's API develops.
+This package is experimental. New features will be released as the Species Inventory Management System develops.
 
 ### Getting Help or Reporting an Issue
 
