update old pkg name to simsbc in vignette

--- a/vignettes/simsbc.Rmd
+++ b/vignettes/simsbc.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "biohubr"
+title: "simsbc"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{biohubr}
+  %\VignetteIndexEntry{simsbc}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -15,5 +15,5 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(biohubr)
+library(simsbc)
 ```
