--- a/vignettes/starting.Rmd
+++ b/vignettes/starting.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 
 This page shows you how to get information about your SIMS Projects in R. We'll start by logging in to SIMS through R to authenticate our requests. Next, we'll request information from SIMS about Projects that we belong to.
 
-```{r setup}
+```{r setup, eval = F}
 library(simsbc)
 ```
 
@@ -26,7 +26,7 @@ library(simsbc)
 
 You must log in to SIMS through R for most *simsbc* functions to work:
 
-```{r}
+```{r, eval = F}
 login_sims()
 ```
 
@@ -44,7 +44,7 @@ Data is organized into Projects and Surveys, the latter of which are like Projec
 
 To get data for one of your Surveys, you must know which Project that Survey belongs to. You can figure this out by first calling `get_my_projects()`.
 
-```{r}
+```{r, eval = F}
 get_my_projects()
 ```
 
@@ -56,7 +56,7 @@ This will return a dataframe with basic information about each of the Projects t
 
 Once you know the ID of your desired Project, you can use `get_project_details(project_id)` to see more information about that Project.
 
-```{r}
+```{r, eval = F}
 get_project_details(project_id = 1)
 ```
 
@@ -66,7 +66,7 @@ This will return an object of class SIMS Project, which is a custom class develo
 
 To get information about Surveys in a Project, you can use `get_surveys(project_id)`.
 
-```{r}
+```{r, eval = F}
 get_surveys(project_id)
 ```
 
