--- a/vignettes/simsbc.Rmd
+++ b/vignettes/simsbc.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "simsbc"
+title: "Introduction to simsbc"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{simsbc}
@@ -14,6 +14,40 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
+*simsbc* aims to make your data more accessible. You can load species observations and other data into a dataframe without needing to export and import intermediate files.
+
+## Getting Access
+
+If you aren't already a SIMS user, you can start by [submitting an access request](https://sims.nrs.gov.bc.ca). Your access request will only be approved if it is clear that you will be managing ecological data from British Columbia.
+
+We are working on a separate, public-facing application for users who simply want to obtain data from other biologists' projects.
+
+## Installation
+
+After receiving access, you can install *simsbc* from GitHub using the [remotes](https://cran.r-project.org/package=remotes) package.
+```{r eval = F}
+# Run only once to be able to install packages from GitHub
+install.packages("remotes")
+
+# Run only once to uses simsbc, or whenever you want to get the latest changes
+remotes::install_github("bcgov/simsbc")
+
+# Run everytime you start R at the top of your script, after install_github()
 library(simsbc)
 ```
+
+We expect to release new features frequently as we are early in development. To use any newly built functions, you must reinstall *simsbc* from GitHub.
+
+Some functions may break unexpectedly as we make improvements to existing code, so we recommend not relying exclusively on *simsbc* until we announce our first proper release.
+
+## Contributing
+
+### Contributing Ideas
+
+If you have ideas for useful functions or improvements, please contact macgregor.aubertin-young@gov.bc.ca. Hearing your ideas will also help us prioritize what to build next.
+
+### Contributing Code
+
+If you want to contribute code, please see our [CONTRIBUTING](https://github.com/bcgov/simsbc/blob/main/CONTRIBUTING.md) guidelines.
+
+If you work in the Natural Resource Ministries and want to contribute code but are not sure where to start, please contact macgregor.aubertin-young@gov.bc.ca. We would love to help you get started!
