--- a/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -1,16 +1,29 @@
 ---
 title: "`r title`"
 author: "`r authors`"
-date: "`r Sys.Date()`"
 output: 
   word_document:
     toc: no
-    number_sections: true
+    reference_docx: template.docx
 documentclass: report
 --- 
 
-Prepared for `r prepared_for`.
-Data citation: Project ID `r project_id`, Survey ID `r survey_id`.
+```{r, echo = F, results = 'hide'}
+date <- format(Sys.Date(), format="%B %d, %Y")
+```
+
+
+:::{custom-style="Title Date"}
+`r date`
+:::
+
+:::{custom-style="Data Citation"}
+Species Inventory Management System Data Citation:
+:::
+
+:::{custom-style="Title Line"}
+Project ID `r project_id`, Survey ID `r survey_id`
+:::
 
 \newpage
 
@@ -18,3 +31,60 @@ Data citation: Project ID `r project_id`, Survey ID `r survey_id`.
 \setcounter{tocdepth}{4}
 \tableofcontents
 ```
+
+\newpage
+
+# Introduction
+
+## Background
+
+## Objectives
+
+# Methods
+
+## Study Area
+
+```{r, fig.width=10, fig.height=10, echo=FALSE}
+# plot(study_area_geometry$geometry)
+## Next load the Regional Districts data, then extract and plot the Kootenays
+
+bc_bounds <- bc_bound(ask = FALSE)
+nr <- nr_regions(ask = FALSE) |> st_set_crs(st_crs(bc_bounds)) |> st_intersection(bc_bounds)
+
+study_area_proj <- study_area_geometry |> st_set_crs(st_crs(bc_bounds))
+# 
+# study_area_bc <- ggplot() +
+#   geom_sf(data = nr,
+#           aes(fill = REGION_NAME, col = REGION_NAME, alpha = 0.7)) +
+#   scale_fill_manual(values = RColorBrewer::brewer.pal(9, "Set3")) +
+#   scale_color_manual(values = RColorBrewer::brewer.pal(9, "Set3")) +
+#   geom_sf(data = study_area_proj, 
+#           col = 'red', fill = 'red', alpha = 0.3) +
+#   # theme_void() +
+#   theme(legend.position = 'none') +
+#   coord_sf(crs=st_crs(4326), datum=sf::st_crs(4326))
+# 
+# study_area_bc
+```
+
+```{r}
+
+sa_bbox <- study_area_geometry |> st_bbox()
+
+study_area <- study_area_bc +
+  coord_sf(xlim = c(sa_bbox[1], sa_bbox[3]),
+           ylim =  c(sa_bbox[2], sa_bbox[4]))
+
+study_area
+```
+
+
+## Survey Design
+
+## Analysis
+
+# Results
+
+# Discussion
+
+# Conclusion
