--- a/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -40,36 +40,41 @@ Project ID `r project_id`, Survey ID `r survey_id`
 
 ## Objectives
 
+`r objectives`
+
 # Methods
 
 ## Study Area
+
+`r study_area_description`
 
 ```{r, fig.width=10, fig.height=10, echo=FALSE}
 # plot(study_area_geometry$geometry)
 ## Next load the Regional Districts data, then extract and plot the Kootenays
 
 bc_bounds <- bc_bound(ask = FALSE)
-nr <- nr_regions(ask = FALSE) |> st_set_crs(st_crs(bc_bounds)) |> st_intersection(bc_bounds)
+nr_raw <- nr_regions(ask = FALSE)
+nr <- nr_raw |> st_set_crs(st_crs(bc_bounds)) |> st_intersection(bc_bounds)
 
-study_area_proj <- study_area_geometry |> st_set_crs(st_crs(bc_bounds))
-# 
-# study_area_bc <- ggplot() +
-#   geom_sf(data = nr,
-#           aes(fill = REGION_NAME, col = REGION_NAME, alpha = 0.7)) +
-#   scale_fill_manual(values = RColorBrewer::brewer.pal(9, "Set3")) +
-#   scale_color_manual(values = RColorBrewer::brewer.pal(9, "Set3")) +
-#   geom_sf(data = study_area_proj, 
-#           col = 'red', fill = 'red', alpha = 0.3) +
-#   # theme_void() +
-#   theme(legend.position = 'none') +
-#   coord_sf(crs=st_crs(4326), datum=sf::st_crs(4326))
-# 
-# study_area_bc
+study_area_proj <- study_area_geometry |> st_transform(crs=st_crs(nr))
+
+custom_blue <- "#1e8dba"
+
+study_area_bc <- ggplot() +
+  geom_sf(data = nr,
+          aes(fill = REGION_NAME, col = REGION_NAME, alpha = 0.4)) +
+  scale_fill_manual(values = RColorBrewer::brewer.pal(9, "Set3")) +
+  scale_color_manual(values = RColorBrewer::brewer.pal(9, "Set3")) +
+  geom_sf(data = study_area_geometry,
+          col = custom_blue, fill = custom_blue, alpha = 0.6) +
+  theme_void() +
+  theme(legend.position = 'none')
+
+study_area_bc
 ```
 
-```{r}
-
-sa_bbox <- study_area_geometry |> st_bbox()
+```{r, eval = T}
+sa_bbox <- study_area_proj |> st_bbox()
 
 study_area <- study_area_bc +
   coord_sf(xlim = c(sa_bbox[1], sa_bbox[3]),
